--- a/main.html
+++ b/main.html
@@ -12,6 +12,16 @@
 		<div id="div3">3</div>
 		<div id="div1">2</div>
 		<div id="div2">1</div>
+		
+		<div id="div3">3</div>
+		<div id="div1">2</div>
+		<div id="div2">1</div>
+		<div id="div3">3</div>
+		<div id="div1">2</div>
+		<div id="div2">1</div>
+		<div id="div3">3</div>
+		<div id="div1">2</div>
+		<div id="div2">1</div>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
